# jc-spotify

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  platformio.ini  sdkconfig.LVGL-320-480  sdkconfig.LVGL-320-480.old  sdkconfig.defaults
docs/: README.md  SPOTIFY_PLAN.md
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  secrets.example.hpp  streamdeck_config.h  usb_service.c  usb_service.h
main/board/: display.cpp  display.hpp  lcd_init_cmds.c  lcd_init_cmds.h  panel_hw.c  panel_hw.h  pins.hpp  touch.cpp  touch.hpp
main/esp/: esp_bsp.c  esp_bsp.h  lv_conf.h  lv_port.c
main/screens/: config_screen.c  config_screen.h  streamdeck_screen.c  streamdeck_screen.h
main/screens/utils/: buttons.c  buttons.h  keyboard.c  keyboard.h  shortcut_handler.c  shortcut_handler.h  styles.h
main/spotify/: api.cpp  api.hpp  art.cpp  art.hpp  auth_pkce.cpp  auth_pkce.hpp  certs_pem.hpp  config.hpp  tokens.cpp  tokens.hpp
main/ui/: fonts.cpp  fonts.hpp  icons.cpp  icons.hpp  player_ui.cpp  player_ui.hpp  status_ui.cpp  status_ui.hpp
main/utils/: hid_util.c  hid_util.h  sd_util.c  sd_util.h
main/wifi/: provision.cpp  provision.hpp
src/: keybinds.c  keybinds.h  main.c  main.h  sdcard_utils.c  sdcard_utils.h  streamdeck.c  streamdeck.h  web_server.c  web_server.h
src/screens/: config_screen.c  streamdeck.c  streamdeck.h  streamdeck_screen.c  streamdeck_screen.h
src/screens/utils/: buttons.c  buttons.h  styles.c
